# genpicks

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  keep-warm.yml  weekly-refresh.yml
data/models/: walkforward.json
data/models/match_winner_v0.1_20260706/: calibrator_x.npy  calibrator_y.npy  model.json  report.json
data/models/match_winner_v0.2_20260711/: model.json  report.json
data/models/try_scorer_v0.1_20260706/: report.json
data/models/try_scorer_v0.1_20260711/: report.json  team_try_model.json
docs/: data-quality.md
migrations/: env.py
migrations/versions/: 11fc5a4067ab_add_match_date_to_matches.py  7a41c90d55e2_add_team_lists_and_lineup_source.py  b3e91f42a6d0_add_users.py  c8de4107249e_add_match_source_keys.py  ddf8d6034a77_initial_schema.py  e5a913c7f204_add_prediction_explanation.py
src/genpicks/: config.py
src/genpicks/api/: __init__.py  billing.py  deps.py  main.py  observability.py
src/genpicks/db/: base.py  models.py
src/genpicks/ingest/: __init__.py  __main__.py  asb_loader.py  cli.py  names.py  nrl_loader.py  oddsapi_loader.py  resolve.py  rlp_loader.py
src/genpicks/ml/: __init__.py  explain.py  export_backtest.py  features.py  geo.py  predict.py  train.py  train_tries.py  tries.py  validate.py
src/genpicks/scrape/: __init__.py  __main__.py  asb.py  backfill.py  fetch.py  nrl.py  oddsapi.py  rlp.py
tests/: test_api.py  test_asb.py  test_availability.py  test_billing.py  test_explain.py  test_features.py  test_geo.py  test_ingest.py  test_nrl.py  test_observability.py  test_oddsapi.py  test_predict.py  test_rlp_parsers.py  test_schema.py  test_tries.py  test_validate.py
tests/fixtures/: nrl-draw-2025-round-1.json  nrl-match-2016-eels-v-broncos.json  nrl-match-2025-raiders-v-warriors.json  oddsapi-nrl-snapshot.json  rlp-match-103171.html  rlp-nrl-2025-results.html
web/: README.md  package-lock.json  package.json
web/public/logos/: README.md
web/src/: auth.ts
web/src/app/: globals.css  layout.tsx  loading.tsx  opengraph-image.alt.txt  page.tsx
web/src/app/matches/[id]/: loading.tsx  page.tsx
web/src/app/methodology/: page.tsx
web/src/app/responsible-gambling/: page.tsx
web/src/app/track-record/: loading.tsx  page.tsx
web/src/components/: api-wait.tsx  calibration-chart.tsx  cumulative-loss-chart.tsx  factor-bars.tsx  market-odds.tsx  prob-bar.tsx  team-logo.tsx  user-menu.tsx
web/src/data/: backtest.json
web/src/lib/: api.ts  backtest.ts  team-logos.ts  team-names.ts
