[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "genpicks"
version = "0.1.0"
description = "NRL match and try-scorer prediction platform"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "stripe>=10",
    "sentry-sdk[fastapi]>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's documented dependency-injection pattern uses calls in defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

[tool.mypy]
# 3.12 (the CI interpreter), not the 3.11 floor: numpy's stubs use the
# `type` statement, which mypy refuses to parse in 3.11 mode
python_version = "3.12"
mypy_path = "src"
packages = ["genpicks"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "xgboost.*",
    "pandas.*",
    "openpyxl.*",
    "bs4.*",
    "stripe.*",
]
ignore_missing_imports = true
